# High-performance-computing

Lab1_posix_threads/: CMakeLists.txt  in.txt  main.cpp  test.cpp
Lab1_posix_threads/.github/workflows/: main.yml
Lab2_lock_free/.github/workflows/: main.yml
Lab2_lock_free/src/main/java/: Application.java  Set.java  SetImpl.java
